--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body {
-    font-family: sans-serif;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 a {
-    color: rgb(255, 81, 0);
+    color: rgb(255, 0, 0);
 }
 
 a:hover {
@@ -16,7 +16,7 @@ a:hover {
 header {
     margin-bottom: 20px;
     padding: 20px;
-    border-bottom: 1px solid rgb(0, 174, 255);
+    border-bottom: 1px solid rgb(0, 17, 255);
 }
 
 
@@ -36,17 +36,17 @@ header nav ul li {
 .project {
     margin-botom: 20px;
     padding-bottom: 10px;
-    border-bottom: 1px solid rgb(0, 174, 255);
+    border-bottom: 1px solid rgb(0, 17, 255);
 }
 
-.project img {
+.project img, #aboutme img{
     width: 250px;
     float: left;
     margin-right: 10px;
     margin-bottom: 10px;
 }
 
-.project h2 {
+.project h2 #aboutme h2{
     font-size: 1.5em;
     margin-bottom: 10px;
 }
